<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">E-mat</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="e_mat_string">E-mat</string>
	<string name="text_string"> </string>
	<string name="convenient_cheap_rides_string">Convenient Cheap rides</string>
	<string name="book_timely___pocket_friendly_rides_remotely_from_your_mobile_device__string">Book timely, pocket_friendly rides remotely from your mobile device.</string>
	<string name="button_string">NEXT</string>
	<string name="e_mat_ek1_string">E-Mat</string>
	<string name="text_ek1_string">           </string>
	<string name="e_mat_ek2_string">E-mat </string>
	<string name="safe_drop_off_and_pickup_string">SAFE DROP-OFF AND PICKUP</string>
	<string name="get_picked_up_at_our_numerous_safe_pickup_locations_all_across_the_city___string">Get picked up at our numerous safe pickup locations all across the city . </string>
	<string name="button_ek1_string">NEXT</string>
	<string name="e_mat_ek3_string">E-mat</string>
	<string name="grab_the_most_convenient_deals_around_string">GRAB THE most convenient DEALS AROUND</string>
	<string name="we_understand_every_student_and_therefore_strive_to_offer_the_most_rides__string">We understand every student and therefore strive to offer the most   rides.</string>
	<string name="button_ek2_string">GET STARTED</string>
	<string name="e_mat_ek4_string">E-mat</string>
	<string name="get_started_ek3_string">GET STARTED</string>
	<string name="get_started_and_enjoy_convenient_affordable_rides_now">Get started and enjoy convenient affordable rides now.</string>
	<string name="button_ek3_string">LOGIN</string>
	<string name="button_ek4_string">REGISTER</string>
	<string name="register_ek3_string">Register</string>
	<string name="label_string">USERNAME</string>
	<string name="placeholder_string">John Doe</string>
	<string name="label_ek1_string">EMAIL</string>
	<string name="placeholder_ek1_string">johndoe@email.com</string>
	<string name="label_ek2_string">PHONE</string>
	<string name="placeholder_ek2_string">+00 123 456 7890</string>
	<string name="label_ek3_string">PASSWORD</string>
	<string name="placeholder_ek3_string">Password</string>
	<string name="button_ek5_string">REGISTER</string>
	<string name="_already_have_an_account__login_string">Already have an account? Login</string>
	<string name="time_string">9:41</string>
	<string name="login_ek3_string">LOGIN</string>
	<string name="label_ek4_string">EMAIL</string>
	<string name="placeholder_ek4_string">johndoe@email.com</string>
	<string name="label_ek5_string">PASSWORD</string>
	<string name="placeholder_ek5_string">Password</string>
	<string name="button_ek6_string">LOGIN</string>
	<string name="_don_t_have_an_account__register_string">Dont have an account? Register</string>
	<string name="_forgot_password_string">Forgot Password</string>
	<string name="time_ek1_string">9:41</string>
	<string name="forgot_password_ek4_string">forgot password</string>
	<string name="we_ll_send_a_password_reset_link_to_your_email__string">We\'ll send a password reset link to your email.</string>
	<string name="label_ek6_string">EMAIL</string>
	<string name="placeholder_ek6_string">johndoe@email.com</string>
	<string name="time_ek2_string">9:41</string>
	<string name="button_ek7_string">SEND RESET LINK</string>
	<string name="address_setup_ek3_string">ADDRESS SETUP</string>
	<string name="button_ek8_string">ADD ADDRESS</string>
	<string name="skip_for_now_string">Skip for now</string>
	<string name="time_ek3_string">9:41</string>
	<string name="label_ek7_string">Country</string>
	<string name="placeholder_ek7_string">Country</string>
	<string name="label_ek8_string">ZIP CODE</string>
	<string name="placeholder_ek8_string">000–000</string>
	<string name="label_ek9_string">CITY</string>
	<string name="placeholder_ek9_string">City</string>
	<string name="label_ek10_string">ADDRESS LINE 2</string>
	<string name="placeholder_ek10_string">Address</string>
	<string name="label_ek11_string">ADDRESS LINE 1</string>
	<string name="placeholder_ek11_string">Address</string>
	<string name="hello__john__string">Hello, John!</string>
	<string name="home_ek4_string">HOME</string>
	<string name="recommended_for_you_string">Recommended for you</string>
	<string name="hello__john__ek1_string">Hello, John!</string>
	<string name="recommended_for_you_ek1_string">Recommended for you</string>
	<string name="home_ek6_string">HOME</string>
	<string name="hello__john__ek2_string">Hello, John!</string>
	<string name="recommended_for_you_ek2_string">Recommended for you</string>
	<string name="home_ek8_string">HOME</string>
	<string name="hello__john__ek3_string">Hello, John!</string>
	<string name="recommended_for_you_ek3_string">Recommended for you</string>
	<string name="home_ek10_string">HOME</string>

    <string name="name">Name</string>
    <string name="payment">Payment</string>
    <string name="wallet">Wallet</string>
    <string name="settings">com.emat.Settings</string>
    <string name="login">login</string>
    <string name="customer_care">Customer care</string>
    <string name="help">Help</string>
    <string name="privacy">Privacy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="destination">Destination</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="full_name">Full Name</string>
    <string name="profile">Profile</string>
    <string name="pickup_point">Pickup Point</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="back_arrow">back_arrow</string>
    <string name="password">Password</string>
    <string name="e_mail">E-Mail</string>
    <string name="account_settings">Account com.emat.Settings</string>
    <string name="logout">Logout</string>
    <string name="alsina_muga">Alsina Muga</string>
    <string name="acc_settings">Acc_settings</string>
    <string name="accountsettings">Account settings</string>
    <string name="update_profile">update profile</string>
	<string name="forgot_password_string">forgot password</string>
	<string name="email_does_not_exist__rty_again__string">Email does not exist, try again.</string>
	<string name="login_string">LOGIN</string>
    <string name="options">Options</string>
    <string name="notifications">Notifications</string>
    <string name="wallets">Wallet</string>
    <string name="home">Home</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="delete_profile">delete profile</string>
    <string name="Delete_profile">Delete profile</string>

    <string name="select">Select Item</string>
    <string name="welcome_text">BOOKING</string>
    <string name="point">Select Pickup Point</string>
    <string name="drop">Select Dropoff Point</string>
    <string name="time">Select Pickup Time</string>
    <string name="bus">Select a Bus</string>
    <string name="submit">Submit</string>
	<string name="recommended_route__string">Recommended route:</string>
	<string name="price_generated_string">price-generated</string>
	<string name="home_string">Home</string>
	<string name="book_string">book</string>
	<string name="pickup_point__string">Pickup-point:</string>
	<string name="pickup_point__ek1_string">Pickup-point:</string>
	<string name="pickup_point__ek2_string">Pickup-point:</string>
	<string name="pickup_point__ek3_string">Pickup-point:</string>
	<string name="pickup_point__ek4_string">Pickup-point:</string>
	<string name="pickup_point__ek5_string">Pickup-point:</string>
	<string name="pickup_point__ek6_string">Pickup-point:</string>
	<string name="dropoff_point__string">Dropoff-point:</string>
	<string name="vehicle_reg__string">Vehicle-reg:</string>
	<string name="departure_time__string">Departure-time:</string>
	<string name="seat_number__string">Seat-number:</string>
	<string name="price__string">Price:</string>
	<string name="generated_receipt_string">Generated receipt</string>
	<string name="confirm_string">CONFIRM</string>
	<string name="row_number_string">Row number</string>
	<string name="column_number_string">Column number</string>
	<string name="seat_booking_string">SEAT BOOKING </string>
	<string name="confirm_ek1_string">confirm</string>
    <string name="vehicle">Vehicle</string>
	<string name="price">Price</string>
	<string name="drop_off">Drop-off</string>
	<string name="pickup">Pickup</string>
	<string name="confirm">CONFIRM</string>
	<string name="booking">Booking</string>
    <string name="cancel">go back</string>

    <string-array name="pickup_points">
        <item>Select your pickup point</item>
        <item>CUEA</item><item>MMU</item><item>COOPERATIVE</item><item>MARIST</item>
    </string-array>
	<string-array name="dropoff_points">
		<item>Select your drop off point</item>
		<item>Tuskys</item><item>Tumaini</item><item>Maasai Lodge</item><item>MMU</item><item>CUEA</item><item>Galleria</item><item>Barracks</item><item>T-Mall</item><item>Madaraka</item><item>Nyayo</item>
	</string-array>
	<string-array name="Vehicles">
		<item>Available Vehicles</item>
		<item>KCB</item><item>KCD</item><item>KCA</item><item>KCF</item>
	</string-array>
	<string-array name="Row_number">
			<item>Row</item>
		<item>1</item><item>2</item><item>3</item><item>4</item><item>5</item><item>6</item><item>7</item><item>8</item>
	</string-array>
	<string-array name="Column_number">
		<item>Column</item>
		<item>A</item><item>B</item><item>C</item><item>D</item>
	</string-array>
	<string-array name="departure_time">
		<item>Time</item>
		<item>7:00AM</item><item>10:00AM</item><item>1:00PM</item><item>4:00PM</item>
	</string-array>
</resources>