<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/lightgray"
    android:gravity="bottom">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_centerVertical="false"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="25dp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="20dp"

        />
    <ImageButton
        android:id="@+id/arrow_back"
        android:contentDescription="@string/back_arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_baseline_arrow_back_24"
        android:maxWidth="@android:dimen/app_icon_size"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"

        />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/person_image"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="@color/teal_700"
        app:civ_border_width="2dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/person_image">



    <EditText
        android:id="@+id/fullname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:autofillHints="name"
        android:background="@drawable/round_input"
        android:textAlignment="center"
        android:padding="10dp"


        />
    <EditText
        android:id="@+id/emailaddress"
        android:layout_width="fill_parent"
        android:autofillHints="emailAddress"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/round_input"
        android:textAlignment="center"
        android:padding="10dp"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:autofillHints="phone"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="160dp"
        android:background="@drawable/round_input"
        android:textAlignment="center"
        android:padding="10dp"

        />
    <EditText
        android:id="@+id/destination"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/destination"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="220dp"
        android:autofillHints="destination"
        android:background="@drawable/round_input"
        android:textAlignment="center"
        android:padding="10dp"

        />
    <EditText
        android:id="@+id/pickup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pickup_point"
        android:inputType="text"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="280dp"
        android:autofillHints="pickup"
        android:background="@drawable/round_input"
        android:textAlignment="center"
        android:padding="10dp"

        />
    </RelativeLayout>
    <Button
        android:id="@+id/editprof"
        android:layout_width="150dp"

        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="@string/edit_profile"
        android:shadowRadius="@integer/material_motion_duration_medium_2"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        />
    <Button
        android:id="@+id/deleteprof"
        android:layout_width="150dp"

        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="@string/Delete_profile"
        android:shadowRadius="@integer/material_motion_duration_medium_2"
        android:backgroundTint="@color/teal_700"
        android:gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="20dp"
        android:layout_alignParentEnd="true"
        android:textAllCaps="false"
        />
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />




</RelativeLayout>