<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/page_onboarding_2_ek1"
	android:layout_marginTop="0dp"
	android:layout_marginStart="0dp"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<View
		android:id="@+id/__bg__onboarding_2_ek2"
		android:layout_width="443dp"
		android:layout_height="898dp"
		android:background="@drawable/alexandre_debieve_ohnbtfe9_ie_unsplash_1"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/e_mat_ek2"
		android:textSize="18sp"
		android:textColor="@color/e_mat_color"
		android:layout_marginStart="20dp"
		android:layout_marginTop="50dp"
		android:layout_width="58dp"
		android:layout_height="35dp"
		android:text="@string/e_mat_ek2_string"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintStart_toStartOf="parent" />


	<TextView
		android:id="@+id/safe_drop_off_and_pickup"
		android:layout_width="349dp"
		android:layout_height="87dp"
		android:layout_marginStart="28dp"
		android:layout_marginTop="50dp"
		android:text="@string/safe_drop_off_and_pickup_string"
		android:textColor="@color/text_color"
		android:textSize="32sp"
		app:layout_constraintBottom_toTopOf="@+id/get_picked_up_at_our_numerous_safe_pickup_locations_all_across_the_city__"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="0.9" />

	<TextView
		android:id="@+id/get_picked_up_at_our_numerous_safe_pickup_locations_all_across_the_city__"
		android:layout_width="295dp"
		android:layout_height="48dp"
		android:layout_marginTop="520dp"
		android:text="@string/get_picked_up_at_our_numerous_safe_pickup_locations_all_across_the_city___string"
		android:textColor="@color/text_color"
		android:textSize="14sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.491"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<RelativeLayout
		android:id="@+id/buttons_ek1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="719dp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent">

		<!--		<View-->
		<!--			android:id="@+id/button_container_ek1"-->
		<!--			android:layout_width="335dp"-->
		<!--			android:layout_height="40dp"-->
		<!--			android:layout_marginStart="0dp"-->
		<!--			android:layout_marginTop="0dp"-->
		<!--			android:background="@drawable/button_container_ek1_shape" />-->

	</RelativeLayout>

	<TextView
		android:id="@+id/button_ek1"
		android:layout_width="349dp"
		android:layout_height="53dp"
		android:layout_gravity="center_horizontal|center"
		android:background="@drawable/button_container_ek1_shape"
		android:gravity="center"
		android:text="@string/button_ek1_string"
		android:textColor="@color/text_color"
		android:textSize="18sp"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/get_picked_up_at_our_numerous_safe_pickup_locations_all_across_the_city__" />

</androidx.constraintlayout.widget.ConstraintLayout>








